Fix result container spacing

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,8 @@
 .body,
 .console-tabs,
 .console .tab,
-.score {
+.score,
+.console .log {
   margin: 0;
 }
 
@@ -240,13 +241,16 @@
   outline: 0.1rem solid hsl(0, 0%, 20%);
 }
 
+.round-result-container {
+  padding: 0.5rem 1.5rem;
+}
+
 .round-result-container-selected {
   background-color: hsla(212, 75%, 60%, 0.3);
   box-shadow: inset 0 0 0 0.05rem hsl(212, 75%, 60%);
 }
 
 .console .log {
-  margin: 0.5rem 1.5rem;
   line-height: 1.5;
 }
 
